[gd_scene load_steps=3 format=3 uid="uid://butwc8rnuoeth"]

[ext_resource type="Script" path="res://Plants/Attacks/ParsnipProjectile.gd" id="1_k7egg"]
[ext_resource type="Texture2D" uid="uid://ddpye7p6xs4id" path="res://Plants/Attacks/beam.png" id="2_1dho5"]

[node name="ParsnipProjectile" type="Node2D"]
z_index = 3
script = ExtResource("1_k7egg")

[node name="TelegraphLine" type="Line2D" parent="."]
width = 2.0
default_color = Color(1, 0, 0, 1)
begin_cap_mode = 2

[node name="AttackLine" type="Line2D" parent="."]
width = 12.0
texture = ExtResource("2_1dho5")
texture_mode = 1
begin_cap_mode = 2

[node name="RayCast2D" type="RayCast2D" parent="."]
collision_mask = 8
hit_from_inside = true
collide_with_areas = true
collide_with_bodies = false

[node name="AttackTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="Fadeout" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
[connection signal="timeout" from="Fadeout" to="." method="_on_fadeout_timeout"]
